--- a/src/app.css
+++ b/src/app.css
@@ -20,6 +20,7 @@ body {
     transition: height 3s, visibility 1.5s, opacity 1.5s ease-out;
     opacity: 0;
     visibility: hidden;
+
     .content {
         background-color: transparent;
         max-width: 90%;
@@ -32,11 +33,47 @@ body {
     }
 }
 
+.searchbar {
+    display: grid;
+    height: 3em;
+    padding: 5px 10px 0px 5px;
+    grid-template-columns: auto 1px 2.5em;
+    grid-template-rows: auto;
+    grid-template-areas:
+        "search . submit";
+
+    .search {
+        grid-area: search;
+        height:2.5em
+
+    }
+
+    .submit {
+        background-color: white;
+        border-radius: 10px;
+        grid-area: submit;
+        width: 2.4em;
+        padding:0.1em;
+        height: 2.5em;
+
+
+    }
+
+    .submit:hover {
+        background-color: rgb(179, 255, 0);
+    }
+
+    .submit:active {
+        color: rgb(255, 0, 179);
+
+    }
+
+}
 
 .loading.visible {
     opacity: 1;
     visibility: visible;
-    height:100%;
+    height: 100%;
 
 }
 
@@ -51,11 +88,16 @@ body {
 .container {
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 3em auto;
+    grid-template-rows: min-content min-content auto;
     grid-template-areas:
         "navbar"
+        "search"
         "content";
     height: 100vh;
+}
+
+.search {
+    grid-area: search
 }
 
 .content {
@@ -66,11 +108,11 @@ body {
 
 .navbar {
     grid-area: navbar;
-    margin:2px 5px 0px 5px;
+    margin: 2px 5px 0px 5px;
 
     display: inline-grid;
     height: 3em;
-    grid-template-columns: min-content auto 3em 3em 3em 3em 3em;
+    grid-template-columns: min-content auto 3em 3em 3em 3em;
 }
 
 
@@ -186,7 +228,7 @@ body {
 .pill {
     background-color: #ff5f75;
 
-    font-size: small;
+    font-size: medium;
     border-radius: 5px;
     height: 1.5em;
     min-width: fit-content;
