--- a/src/app.css
+++ b/src/app.css
@@ -70,6 +70,7 @@ body {
 
 }
 
+
 .loading.visible {
     opacity: 1;
     visibility: visible;
@@ -79,7 +80,8 @@ body {
 
 #map {
     border-radius: 10px 10px 0 0;
-    height: 100%;
+    height: calc(100vh - 11vh);
+    margin-bottom:0;
     position: relative;
 }
 
@@ -88,17 +90,14 @@ body {
 .container {
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: min-content min-content auto;
+    grid-template-rows: min-content auto;
     grid-template-areas:
         "navbar"
-        "search"
         "content";
     height: 100vh;
 }
 
-.search {
-    grid-area: search
-}
+
 
 .content {
     grid-area: content;
