--- a/src/app.css
+++ b/src/app.css
@@ -35,39 +35,16 @@ body {
 
 .searchbar {
     display: grid;
-    height: 3em;
-    padding: 5px 10px 0px 5px;
-    grid-template-columns: auto 1px 2.5em;
+    height: 2.8em;
+    grid-template-columns: 5px auto 0px;
     grid-template-rows: auto;
     grid-template-areas:
-        "search . submit";
+        ". search .";
 
     .search {
         grid-area: search;
         height:2.5em
-
     }
-
-    .submit {
-        background-color: white;
-        border-radius: 10px;
-        grid-area: submit;
-        width: 2.4em;
-        padding:0.1em;
-        height: 2.5em;
-
-
-    }
-
-    .submit:hover {
-        background-color: rgb(179, 255, 0);
-    }
-
-    .submit:active {
-        color: rgb(255, 0, 179);
-
-    }
-
 }
 
 
@@ -184,7 +161,7 @@ body {
         "image . description"
         "image . description"
         "pills pills pills";
-    margin: 5px 5px 10px 5px;
+    margin: 0px 5px 10px 5px;
     padding: 5px;
     border-radius: 5px;
 
