--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,10 @@
+
+:root {
+    /* --color-pink: #ff5f75;
+    --color-blue: rgb(134, 217, 255); */
+ --color-pink: #fd7284;
+    --color-blue: rgb(149, 220, 253);
+}
 body {
     height: 100%;
     margin-top: 0em;
@@ -5,7 +12,7 @@ body {
     padding: 0;
 
     min-width: 320px;
-    background-color: #ff5f75;
+    background-color: var(--color-pink);
 }
 
 
@@ -16,7 +23,7 @@ body {
     top: 0;
     width: 100%;
     height: 0%;
-    background-color: #ff5f75;
+    background-color: var(--color-pink);
     transition: height 3s, visibility 1.5s, opacity 1.5s ease-out;
     opacity: 0;
     visibility: hidden;
@@ -139,20 +146,16 @@ body {
     background-color: rgb(179, 255, 0);
 }
 
-.navbar-link:active {
-    color: rgb(255, 0, 179);
-
-}
 
 .navbar-link[aria-current="page"] {
-    background-color: rgb(134, 217, 255);
+    background-color: var(--color-blue); 
 }
 
 .list-item {
     border: black;
     display: grid;
     border-style: dashed;
-    background-color: rgb(134, 217, 255);
+    background-color: var(--color-blue);
     grid-template-columns: 5em 0.5em auto;
     grid-template-rows: auto;
     grid-template-areas:
@@ -202,7 +205,7 @@ body {
 }
 
 .pill {
-    background-color: #ff5f75;
+    background-color: var(--color-pink);
 
     font-size: medium;
     border-radius: 5px;
@@ -225,15 +228,17 @@ body {
 .new-item-form {
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: auto 2.5em;
+    grid-template-rows: auto 2.5em 2.5em min-content 2.5em;
     grid-template-areas:
         "preview"
         "trigger"
+        "title"
+        "description"
+        "submit"
     ;
     margin: 0px 5px 10px 5px;
     padding: 5px;
     row-gap: 5px;
-
 }
 
 .preview-container {
@@ -263,4 +268,15 @@ body {
         top: 50%;
         transform: translate(-0%, -50%);
     }
+}
+
+
+.new-item-field-container {
+    width: 100%;
+    display:flex;
+}
+
+.new-item-field {
+    margin:0;
+    width:100%;
 }
